--- a/www/css/style.css
+++ b/www/css/style.css
@@ -14,3 +14,46 @@
 .white-color {
     color: #ffffff;
 }
+
+.ad {
+    text-align: center;
+    height: 120px;
+}
+
+.ad p, .ad img {
+    padding: 0;
+    margin: 0;
+    color: #999999;
+    font-size: 16px;
+}
+
+.ad .text-right {
+    text-align: right;
+    margin-right: 10px;
+}
+
+.ad .focus1, .ad .focus2{
+    font-size: 30px;
+    position: relative;
+    top: 10px;
+}
+
+.ad .focus3 {
+    position: relative;
+    left: -5px;
+}
+
+.ad .focus4 {
+    position: relative;
+    left: 5px;
+}
+
+.ad .col {
+    border-right: 1px solid #30c1ae;
+    height: 80px;
+}
+
+.ad .col:last-child {
+    border-right: 0;
+}
+
