--- a/www/templates/tab-home.html
+++ b/www/templates/tab-home.html
@@ -1,28 +1,52 @@
 <ion-view view-title="洗个毛线">
   <ion-content class="padding">
-    <div class="list card">
-      <div class="item item-divider">Recent Updates</div>
-      <div class="item item-body">
-        <div>
-          There is a fire in <b>sector 3</b>
-        </div>
+      <div class="row ad">
+          <div class="col">
+              <img src="/img/home/ad-icon_03.png" width="60%"/>
+              <p>按件洗衣</p>
+              <p class="text-right"><span class="focus1" style="color: #f00">9</span>元起</p>
+          </div>
+          <div class="col">
+              <img src="/img/home/ad-icon_05.png" width="60%"/>
+              <p>按袋洗衣</p>
+              <p class="text-right"><span class="focus2" style="color: #fcb30f">99</span>/袋</p>
+          </div>
+          <div class="col">
+              <img src="/img/home/ad-icon_07.png" width="60%"/>
+              <p>会员充值</p>
+              <p>
+                  <span class="focus3" style="color: #fcb30f">冲500</span>
+              </p>
+              <p>
+                  <span class="focus4" style="color: #fcb30f">送100</span>
+              </p>
+          </div>
+          <div class="col">
+              <img src="/img/home/ad-icon_09.png" width="60%"/>
+              <p>服务范围</p>
+          </div>
       </div>
-    </div>
-    <div class="list card">
-      <div class="item item-divider">Health</div>
-      <div class="item item-body">
-        <div>
-          You ate an apple today!
-        </div>
+      <div class="banner">
+          <ion-slide-box>
+              <ion-slide>
+                  <div class="box">
+                      <img src="/img/home/home-banner1.jpg" alt="" width="100%"/>
+                  </div>
+              </ion-slide>
+              <ion-slide>
+                  <div class="box">
+                      <img src="/img/home/home-banner1.jpg" alt="" width="100%"/>
+                  </div>
+              </ion-slide>
+              <ion-slide>
+                  <div class="box">
+                      <img src="/img/home/home-banner1.jpg" alt="" width="100%"/>
+                  </div>
+              </ion-slide>
+          </ion-slide-box>
       </div>
-    </div>
-    <div class="list card">
-      <div class="item item-divider">Upcoming</div>
-      <div class="item item-body">
-        <div>
-          You have <b>29</b> meetings on your calendar tomorrow.
-        </div>
+      <div class="one-click text-center" style="margin-top: 10px">
+          <img src="/img/home/home-oneclick.jpg" alt="" width="50%"/>
       </div>
-    </div>
   </ion-content>
 </ion-view>
