--- a/www/css/style.css
+++ b/www/css/style.css
@@ -57,3 +57,17 @@
     border-right: 0;
 }
 
+.order-button-bar .active {
+    border-bottom: 1px solid #fff;
+    padding-bottom: 5px;
+}
+
+.order-list .item-avatar {
+    padding-left: 90px;
+    min-height: 72px;
+}
+
+.order-list .item-avatar img {
+    max-width: 60px;
+    max-height: 60px;
+}
