--- a/www/templates/account-login.html
+++ b/www/templates/account-login.html
@@ -1,3 +1,6 @@
+<ion-header-bar class="bar-balanced bar bar-header">
+    <h1 class="title">登陆</h1>
+</ion-header-bar>
 <ion-view view-title="登陆">
   <ion-content class="padding">
     <div class="list card">
