--- a/www/templates/order-detail.html
+++ b/www/templates/order-detail.html
@@ -1,9 +1,6 @@
-<!--
-  This template loads for the 'tab.friend-detail' state (app.js)
-  'friend' is a $scope variable created in the FriendsCtrl controller (controllers.js)
-  The FriendsCtrl pulls data from the Friends service (service.js)
-  The Friends service returns an array of friend data
--->
+<ion-header-bar class="bar-balanced bar bar-header">
+    <h1 class="title">订单详情</h1>
+</ion-header-bar>
 <ion-view view-title="{{chat.name}}">
   <ion-content class="padding">
     <img ng-src="{{chat.face}}" style="width: 64px; height: 64px">
