--- a/www/templates/tab-home.html
+++ b/www/templates/tab-home.html
@@ -1,3 +1,6 @@
+<ion-header-bar class="bar-balanced bar bar-header">
+    <h1 class="title">洗个毛线</h1>
+</ion-header-bar>
 <ion-view view-title="洗个毛线">
   <ion-content class="padding">
       <div class="row ad">
