新增 分类界面

--- a/www/templates/tab-home.html
+++ b/www/templates/tab-home.html
@@ -4,17 +4,17 @@
 <ion-view view-title="洗个毛线">
   <ion-content class="padding">
       <div class="row ad">
-          <div class="col">
+          <div class="col" ng-click="open('tab/item/piece')">
               <img src="/img/home/ad-icon_03.png" width="60%"/>
               <p>按件洗衣</p>
               <p class="text-right"><span class="focus1" style="color: #f00">9</span>元起</p>
           </div>
-          <div class="col">
+          <div class="col" ng-click="open('tab/item/bag')">
               <img src="/img/home/ad-icon_05.png" width="60%"/>
               <p>按袋洗衣</p>
               <p class="text-right"><span class="focus2" style="color: #fcb30f">99</span>/袋</p>
           </div>
-          <div class="col">
+          <div class="col" ng-click="open('tab/pay')">
               <img src="/img/home/ad-icon_07.png" width="60%"/>
               <p>会员充值</p>
               <p>
@@ -24,7 +24,7 @@
                   <span class="focus4" style="color: #fcb30f">送100</span>
               </p>
           </div>
-          <div class="col">
+          <div class="col" ng-click="open('tab/service')">
               <img src="/img/home/ad-icon_09.png" width="60%"/>
               <p>服务范围</p>
           </div>
