--- a/www/templates/tab-home.html
+++ b/www/templates/tab-home.html
@@ -5,17 +5,17 @@
   <ion-content class="padding">
       <div class="row ad">
           <div class="col" ng-click="open('tab/item/piece')">
-              <img src="/img/home/ad-icon_03.png" width="60%"/>
+              <img src="img/home/ad-icon_03.png" width="60%"/>
               <p>按件洗衣</p>
               <p class="text-right"><span class="focus1" style="color: #f00">9</span>元起</p>
           </div>
           <div class="col" ng-click="open('tab/item/bag')">
-              <img src="/img/home/ad-icon_05.png" width="60%"/>
+              <img src="img/home/ad-icon_05.png" width="60%"/>
               <p>按袋洗衣</p>
               <p class="text-right"><span class="focus2" style="color: #fcb30f">99</span>/袋</p>
           </div>
           <div class="col" ng-click="open('tab/pay')">
-              <img src="/img/home/ad-icon_07.png" width="60%"/>
+              <img src="img/home/ad-icon_07.png" width="60%"/>
               <p>会员充值</p>
               <p>
                   <span class="focus3" style="color: #fcb30f">冲500</span>
@@ -25,7 +25,7 @@
               </p>
           </div>
           <div class="col" ng-click="open('tab/service')">
-              <img src="/img/home/ad-icon_09.png" width="60%"/>
+              <img src="img/home/ad-icon_09.png" width="60%"/>
               <p>服务范围</p>
           </div>
       </div>
@@ -33,23 +33,23 @@
           <ion-slide-box>
               <ion-slide>
                   <div class="box">
-                      <img src="/img/home/home-banner1.jpg" alt="" width="100%"/>
+                      <img src="img/home/home-banner1.jpg" alt="" width="100%"/>
                   </div>
               </ion-slide>
               <ion-slide>
                   <div class="box">
-                      <img src="/img/home/home-banner1.jpg" alt="" width="100%"/>
+                      <img src="img/home/home-banner1.jpg" alt="" width="100%"/>
                   </div>
               </ion-slide>
               <ion-slide>
                   <div class="box">
-                      <img src="/img/home/home-banner1.jpg" alt="" width="100%"/>
+                      <img src="img/home/home-banner1.jpg" alt="" width="100%"/>
                   </div>
               </ion-slide>
           </ion-slide-box>
       </div>
       <div class="one-click text-center" style="margin-top: 10px">
-          <img src="/img/home/home-oneclick.jpg" alt="" width="50%"/>
+          <img src="img/home/home-oneclick.jpg" alt="" width="50%"/>
       </div>
   </ion-content>
 </ion-view>
