--- a/www/templates/tab-user.html
+++ b/www/templates/tab-user.html
@@ -6,7 +6,7 @@
         <div class="row balanced-light-bg">
             <div class="col col-20 col-offset-10">
                 <i class="icon ion-android-person" style="font-size: 60px"></i>
-                <!--<img src="/img/ionic.png" alt="" width="100%"/>-->
+                <!--<img src="img/ionic.png" alt="" width="100%"/>-->
             </div>
             <div class="col col-60">
                 <p>13812341234</p>
