--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -15,9 +15,9 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-order"></ion-nav-view>
   </ion-tab>
 
-  <!-- Account Tab -->
-  <ion-tab title="我的" icon-off="ion-ios-person-outline" icon-on="ion-ios-person" href="#/tab/account">
-    <ion-nav-view name="tab-account"></ion-nav-view>
+  <!-- user Tab -->
+  <ion-tab title="我的" icon-off="ion-ios-person-outline" icon-on="ion-ios-person" href="#/tab/user">
+    <ion-nav-view name="tab-user"></ion-nav-view>
   </ion-tab>
 
 
