--- a/www/templates/item-piece.html
+++ b/www/templates/item-piece.html
@@ -20,7 +20,7 @@
   <ion-content>
       <div class="list order-list">
           <a class="item item-avatar" href="#">
-              <img src="/img/order/progress-1.png" width="100%">
+              <img src="img/order/progress-1.png" width="100%">
               <p><i class="icon ion-ios-list-outline balanced"></i> 订单编号: 154342323243</p>
               <p><i class="icon ion-ios-alarm-outline balanced"></i> 订单总额: <span class="energized">29元</span></p>
               <p><i class="icon ion-ios-time-outline balanced"></i> 服务时间: 2015-04-28 18:00-20:00</p>
@@ -32,7 +32,7 @@
       </div>
       <div class="list order-list">
           <a class="item item-avatar" href="#">
-              <img src="/img/order/progress-1.png" width="100%">
+              <img src="img/order/progress-1.png" width="100%">
               <p><i class="icon ion-ios-list-outline balanced"></i> 订单编号: 154342323243</p>
               <p><i class="icon ion-ios-alarm-outline balanced"></i> 订单总额: <span class="energized">29元</span></p>
               <p><i class="icon ion-ios-time-outline balanced"></i> 服务时间: 2015-04-28 18:00-20:00</p>
@@ -44,20 +44,7 @@
       </div>
       <div class="list order-list">
           <a class="item item-avatar" href="#">
-              <img src="/img/order/progress-1.png" width="100%">
-              <p><i class="icon ion-ios-list-outline balanced"></i> 订单编号: 154342323243</p>
-              <p><i class="icon ion-ios-alarm-outline balanced"></i> 订单总额: <span class="energized">29元</span></p>
-              <p><i class="icon ion-ios-time-outline balanced"></i> 服务时间: 2015-04-28 18:00-20:00</p>
-          </a>
-          <div class="button-bar">
-              <a class="button button-balanced">取消订单</a>
-              <a class="button button-balanced">暂无法支付</a>
-          </div>
-      </div>
-
-      <div class="list order-list">
-          <a class="item item-avatar" href="#">
-              <img src="/img/order/progress-1.png" width="100%">
+              <img src="img/order/progress-1.png" width="100%">
               <p><i class="icon ion-ios-list-outline balanced"></i> 订单编号: 154342323243</p>
               <p><i class="icon ion-ios-alarm-outline balanced"></i> 订单总额: <span class="energized">29元</span></p>
               <p><i class="icon ion-ios-time-outline balanced"></i> 服务时间: 2015-04-28 18:00-20:00</p>
@@ -70,7 +57,20 @@
 
       <div class="list order-list">
           <a class="item item-avatar" href="#">
-              <img src="/img/order/progress-1.png" width="100%">
+              <img src="img/order/progress-1.png" width="100%">
+              <p><i class="icon ion-ios-list-outline balanced"></i> 订单编号: 154342323243</p>
+              <p><i class="icon ion-ios-alarm-outline balanced"></i> 订单总额: <span class="energized">29元</span></p>
+              <p><i class="icon ion-ios-time-outline balanced"></i> 服务时间: 2015-04-28 18:00-20:00</p>
+          </a>
+          <div class="button-bar">
+              <a class="button button-balanced">取消订单</a>
+              <a class="button button-balanced">暂无法支付</a>
+          </div>
+      </div>
+
+      <div class="list order-list">
+          <a class="item item-avatar" href="#">
+              <img src="img/order/progress-1.png" width="100%">
               <p><i class="icon ion-ios-list-outline balanced"></i> 订单编号: 154342323243</p>
               <p><i class="icon ion-ios-alarm-outline balanced"></i> 订单总额: <span class="energized">29元</span></p>
               <p><i class="icon ion-ios-time-outline balanced"></i> 服务时间: 2015-04-28 18:00-20:00</p>
