新增 yike的登陆和注册

--- a/www/templates/user-reg.html
+++ b/www/templates/user-reg.html
@@ -1,7 +1,7 @@
 <ion-header-bar class="bar-balanced bar bar-header">
-    <h1 class="title">登陆</h1>
+    <h1 class="title">注册</h1>
 </ion-header-bar>
-<ion-view view-title="登陆">
+<ion-view>
     <ion-content class="padding">
         <div class="list">
             <label class="item item-input">
@@ -10,10 +10,13 @@
             <label class="item item-input">
                 <input type="password" placeholder="密码" ng-model="user.password">
             </label>
+            <label class="item item-input">
+                <input type="password" placeholder="确认密码" ng-model="user.rPassword">
+            </label>
         </div>
-        <button class="button button-balanced button-block" ng-click="login()">
-            登录
+        <button class="button button-balanced button-block" ng-click="reg()">
+            注册
         </button>
-        <a class="button button-balanced button-block" href="#/user-reg">注册</a>
+        <a class="button button-balanced button-block" href="#/user-login">登录</a>
     </ion-content>
 </ion-view>
