--- a/www/templates/tab-user.html
+++ b/www/templates/tab-user.html
@@ -1,7 +1,7 @@
 <ion-header-bar class="bar-balanced bar bar-header">
     <h1 class="title">会员中心</h1>
 </ion-header-bar>
-<ion-view>
+<ion-view ng-controller="UserCtrl">
     <ion-content>
         <div class="row balanced-light-bg">
             <div class="col col-20 col-offset-10">
