--- a/www/templates/user-login.html
+++ b/www/templates/user-login.html
@@ -11,7 +11,7 @@
                 <input type="password" placeholder="密码" ng-model="user.password">
             </label>
         </div>
-        <button class="button button-balanced button-block" ng-click="login()">
+        <button class="button button-balanced button-block" ng-click="login(user.username, user.password)">
             登录
         </button>
         <a class="button button-balanced button-block" href="#/user-reg">注册</a>
