--- a/www/templates/tab-user.html
+++ b/www/templates/tab-user.html
@@ -59,6 +59,12 @@
                 爱心捐赠
                 <i class="icon ion-ios-arrow-forward"></i>
             </a>
+
+            <a class="item item-icon-left item-icon-right" ng-click="logout()">
+                <i class="icon ion-android-favorite-outline"></i>
+                退出系统
+                <i class="icon ion-ios-arrow-forward"></i>
+            </a>
         </div>
     </ion-content>
 </ion-view>
