新增 按件计价界面

--- a/www/templates/item-bag.html
+++ b/www/templates/item-bag.html
@@ -4,81 +4,20 @@
             <a class="col" ng-click="back()">
                 返回
             </a>
-            <a class="col text-center">
-                <span class="active">
-                服务中
+            <a class="col text-center" ng-click="open('/tab/item/piece')">
+                <span>
+                    按件计价
                 </span>
             </a>
             <a class="col text-center">
-                <span>
-                已完成
+                <span class="active">
+                    按袋计价
                 </span>
             </a>
             <a class="col"></a>
         </div>
     </ion-header-bar>
   <ion-content>
-      <div class="list order-list">
-          <a class="item item-avatar" href="#">
-              <img src="img/order/progress-1.png" width="100%">
-              <p><i class="icon ion-ios-list-outline balanced"></i> 订单编号: 154342323243</p>
-              <p><i class="icon ion-ios-alarm-outline balanced"></i> 订单总额: <span class="energized">29元</span></p>
-              <p><i class="icon ion-ios-time-outline balanced"></i> 服务时间: 2015-04-28 18:00-20:00</p>
-          </a>
-          <div class="button-bar">
-              <a class="button button-balanced">取消订单</a>
-              <a class="button button-balanced">暂无法支付</a>
-          </div>
-      </div>
-      <div class="list order-list">
-          <a class="item item-avatar" href="#">
-              <img src="img/order/progress-1.png" width="100%">
-              <p><i class="icon ion-ios-list-outline balanced"></i> 订单编号: 154342323243</p>
-              <p><i class="icon ion-ios-alarm-outline balanced"></i> 订单总额: <span class="energized">29元</span></p>
-              <p><i class="icon ion-ios-time-outline balanced"></i> 服务时间: 2015-04-28 18:00-20:00</p>
-          </a>
-          <div class="button-bar">
-              <a class="button button-balanced">取消订单</a>
-              <a class="button button-balanced">暂无法支付</a>
-          </div>
-      </div>
-      <div class="list order-list">
-          <a class="item item-avatar" href="#">
-              <img src="img/order/progress-1.png" width="100%">
-              <p><i class="icon ion-ios-list-outline balanced"></i> 订单编号: 154342323243</p>
-              <p><i class="icon ion-ios-alarm-outline balanced"></i> 订单总额: <span class="energized">29元</span></p>
-              <p><i class="icon ion-ios-time-outline balanced"></i> 服务时间: 2015-04-28 18:00-20:00</p>
-          </a>
-          <div class="button-bar">
-              <a class="button button-balanced">取消订单</a>
-              <a class="button button-balanced">暂无法支付</a>
-          </div>
-      </div>
-
-      <div class="list order-list">
-          <a class="item item-avatar" href="#">
-              <img src="img/order/progress-1.png" width="100%">
-              <p><i class="icon ion-ios-list-outline balanced"></i> 订单编号: 154342323243</p>
-              <p><i class="icon ion-ios-alarm-outline balanced"></i> 订单总额: <span class="energized">29元</span></p>
-              <p><i class="icon ion-ios-time-outline balanced"></i> 服务时间: 2015-04-28 18:00-20:00</p>
-          </a>
-          <div class="button-bar">
-              <a class="button button-balanced">取消订单</a>
-              <a class="button button-balanced">暂无法支付</a>
-          </div>
-      </div>
-
-      <div class="list order-list">
-          <a class="item item-avatar" href="#">
-              <img src="img/order/progress-1.png" width="100%">
-              <p><i class="icon ion-ios-list-outline balanced"></i> 订单编号: 154342323243</p>
-              <p><i class="icon ion-ios-alarm-outline balanced"></i> 订单总额: <span class="energized">29元</span></p>
-              <p><i class="icon ion-ios-time-outline balanced"></i> 服务时间: 2015-04-28 18:00-20:00</p>
-          </a>
-          <div class="button-bar">
-              <a class="button button-balanced">取消订单</a>
-              <a class="button button-balanced">暂无法支付</a>
-          </div>
-      </div>
+      按袋计价
   </ion-content>
 </ion-view>
