新增 按袋计价

--- a/www/templates/item-bag.html
+++ b/www/templates/item-bag.html
@@ -18,6 +18,10 @@
         </div>
     </ion-header-bar>
   <ion-content>
-      按袋计价
+      <div class="row">
+          <div class="col">
+              <img src="img/item/Bag.jpg" alt="" width="100%"/>
+          </div>
+      </div>
   </ion-content>
 </ion-view>
