--- a/www/templates/tab-user.html
+++ b/www/templates/tab-user.html
@@ -61,7 +61,7 @@
             </a>
 
             <a class="item item-icon-left item-icon-right" ng-click="logout()">
-                <i class="icon ion-android-favorite-outline"></i>
+                <i class="icon ion-android-walk"></i>
                 退出系统
                 <i class="icon ion-ios-arrow-forward"></i>
             </a>
