新增 选择地址界面

--- a/www/templates/tab-home.html
+++ b/www/templates/tab-home.html
@@ -48,7 +48,7 @@
               </ion-slide>
           </ion-slide-box>
       </div>
-      <div class="one-click text-center" style="margin-top: 10px">
+      <div class="one-click text-center" style="margin-top: 10px" ng-click="open('/address')">
           <img src="img/home/home-oneclick.jpg" alt="" width="50%"/>
       </div>
   </ion-content>
