--- a/www/templates/item-piece.html
+++ b/www/templates/item-piece.html
@@ -14,7 +14,10 @@
                     按袋计价
                 </span>
             </a>
-            <a class="col"></a>
+            <div class="col"></div>
+            <!--<a class="col text-right" ng-click="open('/address')">-->
+                <!--下单-->
+            <!--</a>-->
         </div>
     </ion-header-bar>
   <ion-content>
@@ -64,7 +67,7 @@
       </div>
   </ion-content>
 </ion-view>
-<div class="bar bar-footer bar-balanced" style="margin-bottom: 47px;">
+<div class="bar bar-footer bar-balanced" style="margin-bottom: 47px; display: none;">
     <div class="row">
         <div class="col">总价:{{money}}元({{piece}}件)</div>
         <a class="col text-right" ng-click="order()">
