--- a/www/templates/address.html
+++ b/www/templates/address.html
@@ -1,6 +1,6 @@
 <ion-header-bar class="bar-balanced bar bar-header">
     <h1 class="title">选择地址</h1>
-    <button class="button button-clear" style="font-size: 12px;">添加地址</button>
+    <button class="button button-clear" style="font-size: 12px;" ng-click="open('/address/add')">添加地址</button>
 </ion-header-bar>
 <ion-view>
     <ion-content class="padding">
