新增 APP端产品列表更新

--- a/www/templates/item-piece.html
+++ b/www/templates/item-piece.html
@@ -15,9 +15,9 @@
                 </span>
             </a>
             <div class="col"></div>
-            <!--<a class="col text-right" ng-click="open('/address')">-->
-                <!--下单-->
-            <!--</a>-->
+            <a class="col text-right" ng-click="open('/address')">
+                下单
+            </a>
         </div>
     </ion-header-bar>
   <ion-content>
@@ -67,7 +67,7 @@
       </div>
   </ion-content>
 </ion-view>
-<div class="bar bar-footer bar-balanced" style="margin-bottom: 47px; display: none;">
+<div class="bar bar-footer bar-balanced" style="margin-bottom: 47px;">
     <div class="row">
         <div class="col">总价:{{money}}元({{piece}}件)</div>
         <a class="col text-right" ng-click="order()">
